syntax = "proto3";

package pb;

option go_package = "github.com/siddheshRajendraNimbalkar/collage-prject-backend/pb";


message Order {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double total_price = 5;
  string status = 6; 
  string created_at = 7;
}

message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message GetOrderRequest {
  string id = 1;
}

message ListOrdersByUserRequest {
  string user_id = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2; // "pending", "completed", "cancelled"
}

message DeleteOrderRequest {
  string id = 1;
}

message OrderResponse {
  Order order = 1;
}

message DeleteOrderResponse {
  string message = 1;
}
